2001-10-05  Jeff Law <law@redhat.com>

	* som.h (som_exec_data): New field "version_id".
	* som.c (som_object_setup): Record the version_id if it
	exists.
	(som_prep_headers): Do not initialize version_id here.
	(som_finish_writing): Initialize version_id here.

2000-10-05  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elf32-mips.c (elf_mips_howto_table): Fix some relocation howtos
	according to the MIPS/SGI ELF64 ABI Draft.
	(mips_elf_sort_hash_table): Typo.

2001-10-04  Alan Modra  <amodra@bigpond.net.au>

	* elf32-mips.c (_bfd_mips_elf_copy_indirect_symbol): Comment typo.

	* elf32-mips.c (_bfd_mips_elf_copy_indirect_symbol): Bail out after
	copying flags if this is a weakdef.

2001-10-04  Alan Modra  <amodra@bigpond.net.au>

	* elf-bfd.h (struct elf_link_hash_entry): Reorganise for better
	packing.

	* elf32-mips.c (mips_elf_record_global_got_symbol): Set got.offset 
	to 1 rather than 0 to avoid confusing copy_indirect_symbol.
	(mips_elf_sort_hash_table_f): Compare got.offset against 1.

	* Makefile.am (BFD_H_DEPS): Add symcat.h.  Ensure everything
	depends on $(BFD_H) $(BFD_H_DEPS) $(LOCAL_H_DEPS), not just those
	backends we configure.  Run "make dep-am".
	(install-data-local): Install symcat.h.
	* dep-in.sed: Remove symcat.h from dependencies.
	* Makefile.in: Regenerate.

2001-10-03  Vassili Karpov  <malc@pulsesoft.com>

	* elf32-i386.c (elf_i386_adjust_dynamic_symbol): Handle nocopyreloc.

2001-10-03  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elf64-mips.c (elf_backend_may_use_rela_p): New define.
	(elf_backend_default_use_rela_p): New define.

2001-10-03  Alan Modra  <amodra@bigpond.net.au>

	* elfxx-ia64.c (elfNN_ia64_hash_copy_indirect): Fix typos in last
	change.

	* configure.in (AC_OUTPUT <bfd-in3.h>): Remove version.h.
	* configure: Regenerate.
	* Makefile.am (BFD_H_FILES): Add version.h.
	* Makefile.in: Regenerate.
	* po/SRC-POTFILES.in: Regenerate.

	* elflink.h (elf_fix_symbol_flags): Copy flags to weakdef using